categories pagination solved

--- a/templates/home.html
+++ b/templates/home.html
@@ -136,9 +136,8 @@
                 <div class="col-sm-12 col-md-2 col-lg-1">
                     <div class="job__star">
                         {% if trending.type == '1' %}
-                        <span class="badge featured-badge badge-success">Paid</span> {% elif trending.type == '2' %}
-                        <span class="badge featured-badge badge-primary">Unpaid</span> {% else %}
-                        <span style="color: #ffffff;" class="badge featured-badge badge-warning">Remote</span> {% endif %}
+                        <span class="badge featured-badge badge-success">Paid</span> {% else %}
+                        <span class="badge featured-badge badge-primary">Unpaid</span> {% endif %}
                     </div>
                 </div>
             </div>
