--- a/templates/base.html
+++ b/templates/base.html
@@ -86,7 +86,7 @@
                             <a id="clientZone" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle has-img mb-3 mb-lg-0 mt-3 mt-lg-0">
                                 <div class="client-menu-image">
                                     <div class="inner">
-                                        <img src="{{ request.user.userprofile.image.url}}" alt="company image" class="img-fluid">
+                                        <img src="{{ request.user.userprofile.image.url }}" alt="company image" class="img-fluid">
                                     </div>
                                 </div>
                                 {% if request.user.role == 'employer' %} {{ request.user.first_name }}{% endif %}
@@ -111,8 +111,10 @@
                             </a>
                             <div aria-labelledby="clientZone" class="dropdown-menu">
                                 <!-- <a href="{% url 'accounts:employer-profile-update' %}" class="dropdown-item">Profile</a> -->
-                                <a href="{% url 'jobs:applied-jobs' %}" class="dropdown-item">Applied Jobs</a>
                                 <a href="{% url 'accounts:my-profile' %}" class="dropdown-item">Profile</a>
+                                <a href="{% url 'jobs:applied-jobs' %}" class="dropdown-item">Applied Jobs</a>
+                                <a href="{% url 'accounts:employee-resume' request.user.id %}" class="dropdown-item">Show CV</a>
+                                <a href="{% url 'accounts:resumedownload' request.user.id %}" class="dropdown-item">Download Cv</a>
                                 <a href="{% url 'accounts:logout' %}" class="dropdown-item">Logout</a>
                             </div>
                         </li>
@@ -122,7 +124,7 @@
                             <a id="clientZone" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle has-img mb-3 mb-lg-0 mt-3 mt-lg-0">
                                 <div class="client-menu-image">
                                     <div class="inner">
-                                        <img src="{{user.userprofile.image.url}}" alt="company image" class="img-fluid">
+                                        <img src="{{request.user.userprofile.image.url}}" alt="company image" class="img-fluid">
                                     </div>
                                 </div>
                                 {% if request.user.role == 'admin' %} {{ request.user.first_name }} {{ request.user.last_name }} {% else %} {{ request.user.first_name }} {% endif %}
