--- a/templates/jobs/allcategories.html
+++ b/templates/jobs/allcategories.html
@@ -29,7 +29,7 @@
     <div class="container">
         <h3 class="heading">All Categories<span class="accent"></span></h3>
         <div class="row featured align-items-stretch">
-            {% for cat in categories %}
+            {% for category in catogories %}
             <div class="col-lg-3 mb-5 mb-lg-0">
                 <div class="box-image-text bg-visible full-height">
                     <!-- <div class="top">
@@ -45,11 +45,11 @@
                         </div> -->
                     <div class="content">
                         <div>
-                            <img src="{{ cat.logo.url }}" alt="cat Logo" style="height: 100px;  border-radius: 50%;">
+                            <img src="{{ category.logo.url }}" alt="Company Logo" style="height: 100px;border-radius: 50%;">
                         </div>
                         <br>
                         <div>
-                            <h5><a href="{% url 'jobs:filter-jobs' cat.id  %}"><i class="fa fa-building"></i> {{ cat.name }}</a></h5>
+                            <h5><a href="{% url 'jobs:filter-jobs' category.id %}"><i class="fa fa-building"></i> {{ category.name }}</a></h5>
                         </div>
 
                         <!-- <p><i class="fa fa-building"></i> {{ company.first_name }}</p> -->
