--- a/templates/jobs/companies.html
+++ b/templates/jobs/companies.html
@@ -1,19 +1,14 @@
 {% extends 'base.html' %} {% load static %} {% block title %} All Companies {% endblock %} {% block content %}
-<!-- 
+
 <section class="job-form-section job-form-section--compressed" style="background-image: linear-gradient(180deg, #05386B, #fffff5);">
     <div class="container">
-        <h3 class="heading">Find a <span class="accent">job </span> you will <span class="accent">love</span></h3>
-        <form id="job-main-form" method="get" action="#" class="job-main-form">
+        <h3 class="heading">Find a <span class="accent">Company </span> Where you will <span class="accent">love to work</span></h3>
+        <form id="job-main-form" method="get" action="{% url 'jobs:company-search' %}" class="job-main-form">
             <div class="controls">
                 <div class="row align-items-end">
-                    <div class="col-sm-1 col-lg-2"></div>
-                    <div class="col-sm-5 col-lg-4 form-group">
-                        <label for="profession">Profession</label>
-                        <input type="text" id="profession" name="profession" placeholder="ex: Software Engineer" class="form-control">
-                    </div>
-                    <div class="col-sm-5 col-lg-4 form-group">
-                        <label for="location">Location</label>
-                        <input type="text" id="location" name="location" placeholder="ex: Dhaka" class="form-control">
+                    <div class="col-sm-10 col-lg-10 form-group">
+                        <label for="company">Company Name</label>
+                        <input type="text" id="company" name="company" placeholder="ex: Google" class="form-control">
                     </div>
                     <div class="col-sm-1 col-lg-2 form-group">
                         <button type="submit" name="name" class="btn btn-outline-white-primary job-main-form__button">
@@ -24,7 +19,7 @@
             </div>
         </form>
     </div>
-</section> -->
+</section>
 <section>
     <div class="container">
         <h3 class="heading">All Registerd Companies<span class="accent"></span></h3>
