--- a/templates/resume/resume.html
+++ b/templates/resume/resume.html
@@ -5,7 +5,7 @@
 
 <head>
 
-    <title>{{user.first_name}} {{user.last_name}}</title>
+    <title>Resume of - {{user.first_name}} {{user.last_name}}</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
     <meta name="keywords" content="" />
