--- a/templates/jobs/company-search.html
+++ b/templates/jobs/company-search.html
@@ -1,25 +1,17 @@
-{% extends 'base.html' %} {% load static %} {% block title %} All jobs {% endblock %} {% block content %}
+{% extends 'base.html' %} {% load static %} {% block title %} All companies {% endblock %} {% block content %}
 
 <section class="job-form-section job-form-section--compressed" style="background-image: linear-gradient(180deg, #05386B, #fffff5);">
     <div class="container">
-        <h4 class="heading">Find a <span class="accent">job </span> you will <span class="accent">love</span></h4>
-        <form id="job-main-form" method="get" action="{% url 'jobs:search' %}" class="job-main-form">
+        <h3 class="heading">Find a <span class="accent">Company </span> Where you will <span class="accent">love to work</span></h3>
+        <form id="job-main-form" method="get" action="{% url 'jobs:company-search' %}" class="job-main-form">
             <div class="controls">
-                <div class="row align-items-center">
-                    <div class="col-md-5">
-                        <div class="form-group">
-                            <label for="profession">Position</label>
-                            <input type="text" id="profession" name="position" placeholder="ex: Software Engineer" class="form-control">
-                        </div>
+                <div class="row align-items-end">
+                    <div class="col-sm-10 col-lg-10 form-group">
+                        <label for="company">Company Name</label>
+                        <input type="text" id="company" name="company" value="{{ company }}" placeholder="ex: Google" class="form-control">
                     </div>
-                    <div class="col-md-5">
-                        <div class="form-group">
-                            <label for="location">Location</label>
-                            <input type="text" id="location" name="location" placeholder="ex: Dhaka" class="form-control">
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                        <button type="submit" class="btn btn-outline-white-primary job-main-form__button">
+                    <div class="col-sm-1 col-lg-2 form-group">
+                        <button type="submit" name="name" class="btn btn-outline-white-primary job-main-form__button">
                                 <i class="fa fa-search"></i>
                             </button>
                     </div>
@@ -30,50 +22,41 @@
 </section>
 <section>
     <div class="container">
-        <h3 class="heading">We have found <span class="accent">{{ jobs.count }}</span> Companies</h3>
-        {% for job in jobs %}
-        <div class="job-listing  ">
-            <div class="row">
-                <div class="col-md-12 col-lg-6">
-                    <div class="row">
-                        <div class="col-2">
-                            <img src="{{ job.user.userprofile.image.url }}" alt="user-image " class="img-fluid">
+        <h3 class="heading">We have found <span class="accent">{{ companies.count }}</span> companies</h3>
+        <div class="row featured align-items-stretch">
+            {% for com in companies %}
+            <div class="col-lg-3 mb-5 mb-lg-0">
+                <div class="box-image-text bg-visible full-height">
+                    <!-- <div class="top">
+                            <a href="#">
+                                <div class="image">
+                                    <img src="{% static 'img/featured1.jpg' %}" alt="" class="img-fluid">
+                                </div>
+                                <div class="bg"></div>
+                                <div class="logo">
+                                    <img src="{% static 'img/company-1.png' %}" alt="" style="max-width: 80px;">
+                                </div>
+                            </a>
+                        </div> -->
+                    <div class="content">
+                        <div>
+                            <img src="{{ com.userprofile.image.url }}" alt="Company Logo" style="height: 100px;border-radius: 50%;">
                         </div>
-                        <div class="col-10">
-                            <h4 class="job__title"><a href="{% url 'jobs:jobs-detail' job.id %}">{{ job.title }}</a></h4>
+                        <br>
+                        <div>
+                            <h5><a href="{% url 'accounts:user-detail' com.id %}"><i class="fa fa-building"></i> {{ com.first_name }}</a></h5>
+                        </div>
 
-                            {% if request.user.is_authenticated and request.user == job.user %}
-                            <a href="{% url 'accounts:my-profile' %}">
-                                <p class="job__company">
-                                    <i class="fa fa-building"></i> {{ job.company_name }}
-                                </p>
-                            </a>
-                            {% else %}
-                            <a href="{% url 'accounts:user-detail' job.user.id %}">
-                                <p class="job__company">
-                                    <i class="fa fa-building"></i> {{ job.company_name }}
-                                </p>
-                            </a>
-                            {% endif %}
-                        </div>
-                    </div>
-                </div>
-                <div class="col-10 col-md-3 col-lg-2 ml-auto"><i class="fa fa-map-marker job__location"></i> {{ job.location }}
-                </div>
-                <div class="col-10 col-md-3 col-lg-3 ml-auto">
-                    <p>Posted {{ job.created_at|timesince }}</p>
-                </div>
-                <div class="col-sm-12 col-md-2 col-lg-1">
-                    <div class="job__star">
-                        {% if job.type == '1' %}
-                        <span class="badge featured-badge badge-success">Paid</span> {% elif job.type == '2' %}
-                        <span class="badge featured-badge badge-primary">Unpaid</span> {% else %}
-                        <span style="color: #ffffff;" class="badge featured-badge badge-warning">Remote</span> {% endif %}
+                        <!-- <p><i class="fa fa-building"></i> {{ com.userprofile.location }}</p> -->
+                        <!-- <a><button class="btn btn-outline-white-primary">Read More</button></a> -->
+                        <!-- <p>{{ job.description|safe|truncatechars:40 }}</p> -->
                     </div>
                 </div>
             </div>
+            {% endfor %}
         </div>
-        {% endfor %} {% if is_paginated %}
+
+        {% if is_paginated %}
         <div class="row">
             <div class="col-md-12">
                 <nav aria-label="Page navigation example" class="d-flex justify-content-center mt-4 mb-4">
@@ -110,5 +93,4 @@
         {% endif %}
     </div>
 </section>
-
 {% endblock %}
